Add tooltip for onscreen keyboard button in tray

Bug: 826215
Change-Id: Ia7dc94085d74519e6ecaea09dd9f3b4dcb8104ec
Reviewed-on: https://chromium-review.googlesource.com/1227594
Reviewed-by: Jenny Zhang <jennyz@chromium.org>
Commit-Queue: Zach Helfinstein <zhelfins@chromium.org>
Cr-Commit-Position: refs/heads/master@{#592450}
Former-commit-id: 2c5af88016d82f300cdd5ac4fbd0708df5496511